--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
     },
     "plugins": [
       "expo-build-properties",
-      "expo-localization"
+      "expo-localization",
+      "expo-image-picker"
     ]
   }
 }
