--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-build-properties": "~0.5.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-router": "^1.0.0-rc5",
