--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-firebase/analytics": "^17.4.1",
     "@react-native-firebase/app": "^17.4.1",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.10",
     "expo-build-properties": "~0.5.1",
+    "expo-calendar": "~11.1.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-image-picker": "~14.1.1",
@@ -33,6 +35,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1294.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
