--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/analytics": "^17.4.1",
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-picker/picker": "2.4.8",
