--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
