--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.3.5",
     "expo": "~48.0.10",
     "expo-build-properties": "~0.5.1",
     "expo-calendar": "~11.1.1",
@@ -38,7 +39,6 @@
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
