--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "expo": "~48.0.10",
     "expo-build-properties": "~0.5.1",
     "expo-calendar": "~11.1.1",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-router": "^1.0.0-rc5",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
