--- a/app.json
+++ b/app.json
@@ -24,7 +24,6 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
-        "android.permission.NOTIFICATIONS",
         "android.permission.RECORD_AUDIO"
       ],
       "googleServicesFile": "./google-services.json",
@@ -37,7 +36,8 @@
     "plugins": [
       "expo-build-properties",
       "expo-localization",
-      "expo-image-picker"
+      "expo-image-picker",
+      "expo-notifications"
     ],
     "extra": {
       "eas": {
