--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "~0.18.10"
+    "react-native-vision-camera": "^2.15.4",
+    "react-native-web": "~0.18.10",
+    "vision-camera-ocr": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
