--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@novu/node": "^0.14.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/analytics": "^17.4.1",
     "@react-native-firebase/app": "^17.4.1",
@@ -22,6 +23,7 @@
     "expo": "~48.0.10",
     "expo-build-properties": "~0.6.0",
     "expo-calendar": "~11.1.1",
+    "expo-camera": "~13.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
@@ -30,7 +32,7 @@
     "expo-localization": "~14.1.1",
     "expo-notifications": "~0.18.1",
     "expo-router": "^1.0.0-rc5",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
     "expo-web-browser": "~12.1.1",
@@ -38,21 +40,19 @@
     "i18n-js": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-vision-camera": "^2.15.4",
-    "react-native-web": "~0.18.10",
-    "vision-camera-ocr": "^1.0.0"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.0.27",
     "jest": "^29.2.1",
-    "jest-expo": "~48.0.0",
+    "jest-expo": "^48.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.9.4"
   },
