--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-mlkit-ocr": "^0.3.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
