--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
     "expo-build-properties": "~0.6.0",
@@ -44,10 +45,12 @@
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-mlkit-ocr": "^0.3.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "stripe-client": "^1.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
