--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^13.0.0",
     "@novu/node": "^0.14.0",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -19,6 +20,8 @@
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.0.2",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
     "expo-build-properties": "~0.6.0",
@@ -28,6 +31,7 @@
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
     "expo-notifications": "~0.18.1",
@@ -47,6 +51,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "~0.18.11",
     "stripe-client": "^1.1.5"
