--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.3.5",
+    "eas-cli": "^3.13.3",
     "expo": "~48.0.10",
     "expo-build-properties": "~0.6.0",
     "expo-calendar": "~11.1.1",
